--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Casa_del_Maiz</title>
 </head>
 <body>
-  ><h1>Hola mundo</h1>  
+    <h1>Casa del Maiz</h1>
+    <p>We bring the vibrant flavors of Mexico straight to your plate! Specializing in gourmet Mexican street style corn,
+    we offer a delicious twist on this beloved classic.</p>
 </body>
 </html>
