--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Jack Segura">
+    <meta name="description" content="We bring the vibrant flavors of Mexico straight to your plate! Specializing in gourmet
+    Mexican street style corn, we offer a delicious twist on this beloved classic.">
     <title>Casa_del_Maiz</title>
 </head>
 <body>
